[package]
name = "clplog"
version = "0.1.0"
authors = ["Martijn Janssen <martijn9612+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "1.2.3"
regex = "1.3.4"
indicatif = "0.14.0"
lazy_static = "1.4.0"
